@@ -244,7 +244,7 @@ end
 if __FILE__ == $0
   require 'test/unit'
 
-  class Hash # :nodoc:
+  class TSortHash < Hash # :nodoc:
     include TSort
     alias tsort_each_node each_key
     def tsort_each_child(node, &block)
@@ -252,7 +252,7 @@ if __FILE__ == $0
     end
   end
 
-  class Array # :nodoc:
+  class TSortArray < Array # :nodoc:
     include TSort
     alias tsort_each_node each_index
     def tsort_each_child(node, &block)
@@ -262,24 +262,24 @@ if __FILE__ == $0
 
   class TSortTest < Test::Unit::TestCase # :nodoc:
     def test_dag
-      h = {1=>[2, 3], 2=>[3], 3=>[]}
+      h = TSortHash[{1=>[2, 3], 2=>[3], 3=>[]}]
       assert_equal([3, 2, 1], h.tsort)
       assert_equal([[3], [2], [1]], h.strongly_connected_components)
     end
 
     def test_cycle
-      h = {1=>[2], 2=>[3, 4], 3=>[2], 4=>[]}
+      h = TSortHash[{1=>[2], 2=>[3, 4], 3=>[2], 4=>[]}]
       assert_equal([[4], [2, 3], [1]],
         h.strongly_connected_components.map {|nodes| nodes.sort})
-      assert_raises(TSort::Cyclic) { h.tsort }
+      assert_raise(TSort::Cyclic) { h.tsort }
     end
 
     def test_array
-      a = [[1], [0], [0], [2]]
+      a = TSortArray[[1], [0], [0], [2]]
       assert_equal([[0, 1], [2], [3]],
         a.strongly_connected_components.map {|nodes| nodes.sort})
 
-      a = [[], [0]]
+      a = TSortArray[[], [0]]
       assert_equal([[0], [1]],
         a.strongly_connected_components.map {|nodes| nodes.sort})
     end
